--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^5.0.43",
     "jspdf": "^3.0.1",
     "preact": "^10.26.9",
+    "swiper": "^11.2.10",
     "tailwindcss": "^3.4.17"
   }
 }
